--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -2,7 +2,7 @@ name: Deploy Frontend to GitHub Pages
 
 on:
   push:
-    branches: [ "main" ]  # change if your branch is different
+    branches: ["main"]
 
 permissions:
   contents: read
@@ -22,7 +22,7 @@ jobs:
       - name: Upload Frontend folder
         uses: actions/upload-pages-artifact@v2
         with:
-          path: Frontend   # <-- this folder will be deployed
+          path: Frontend    # deploy THIS folder
 
   deploy:
     needs: build
