--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -2,7 +2,8 @@ name: Deploy Frontend to GitHub Pages
 
 on:
   push:
-    branches: ["main"]
+    branches: ["main"]    # <- change "main" if your default branch is different
+  workflow_dispatch: {}   # allows manual run from Actions tab
 
 permissions:
   contents: read
@@ -12,17 +13,29 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
+    outputs:
+      artifact-path: dist
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
+      - name: Prepare dist folder from Frontend
+        run: |
+          # Remove if exists (safe re-run)
+          rm -rf dist
+          mkdir dist
+          # Copy all top-level files and folders from Frontend into dist
+          cp -a Frontend/. dist/
 
-      - name: Upload Frontend folder
-        uses: actions/upload-pages-artifact@v2
+      - name: List dist contents (debug)
+        run: |
+          echo "---- dist contents ----"
+          ls -la dist || true
+
+      - name: Upload pages artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          path: Frontend    # deploy THIS folder
+          path: dist
 
   deploy:
     needs: build
@@ -32,4 +45,4 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v4
